# apim-gen-ai-resources

./: .gitignore  README.md
book-backend-demo/: docker-compose.yml  openapi-original.yaml  openapi.yaml  package-lock.json  package.json  test-api.sh
book-backend-demo/backend/: package.json  server.js  server.openapi.yaml
book-backend-demo/playwright/: probe-service-form.js  probe.js  setup-kong.js
mcp/: FILE_INPUT_ENDPOINTS_REPORT.md
mcp/deploy/apigee/mcp-apigee-deploy-http/: Dockerfile  README.md  REPORT.md  config.properties  entrypoint.sh  extra_tools.py  run_server.py
mcp/deploy/wso2/mcp-wso2-deploy-http/: README.md  pyproject.toml  server.py  wso2_client.py
mcp/deploy/wso2/mcp-wso2-deploy-http/tests/: test_e2e.py  test_persistence.py
mcp/tests/postman/mcp-postman-newman-api-tests/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  server.py
mcp/tests/spectral/mcp-spectral-api-tests/: .dockerignore  .gitignore  Dockerfile  Dockerfile.http  README.md  REPORT.md  package-lock.json  package.json  pyproject.toml  server.py
mcp/tests/spectral/mcp-spectral-api-tests/tests/: smoke_http.py  smoke_stdio.py
run-apim-instances/wso2/: docker-compose.yml
skills/fix-openapi-spectral/: SKILL.md
skills/fix-openapi-spectral/agents/: openai.yaml
skills/fix-openapi-spectral/references/: spectral-findings.md
skills/openapi-spec-generation/: SKILL.md
skills/openapi-spec-generation/evals/: evals.json
skills/openapi-spec-generation/references/: apigee.md  ibm-apic.md
(+18 files in other folders)
